--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,14 +1,21 @@
 #
 # Makefile for webrtc gocv
 #
+PROG=gocv-view
 usage:
 	@echo "usage: make [build|run]"
 
 build b:
-	go build -o gocv-view main.go
+	go build -o $(PROG) main.go
 
 run r:
-	./gocv-view
+	./$(PROG)
+
+kill k:
+	pkill $(PROG)
+
+clean:
+	rm -f $(PROG)
 
 git-updtae gu:
 	cd ..; make gu
